--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <p>
                 I've gathered a broad skill set in web development, covering HTML, CSS, JavaScript, and various frameworks like Bootstrap, Tailwind CSS, jQuery, React, as well as backend technologies such as PHP, MySQL, Node.js, Express.js, and now i am learning MongoDB. My diverse skills and project experience equip me for a wide range of web development tasks, and staying updated with industry trends will further enhance My capabilities.
             </p>
-            <button class="btn1" id="downloadButton">Resume</button>
+            <button class="btn1"><a href="https://www.canva.com/design/DAFsospuEaE/M5_6AaVKLgreIdyWoYIdjQ/view?utm_content=DAFsospuEaE&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink">Resume</a></button>
             <button class="btn2"><a href="https://github.com/RakshitDubey">Github</a></button>
         </div>
         <div class="right">
