--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
         <div class="card">
             <h2>Figma to Html</h2>
-            <p>I have make a Github Profile genrator using js and apis</p>
+            <p>I have a project where i have convert a figma template to html.</p>
         </div>
     </div>
 </div>
